--- a/template/static/index.html
+++ b/template/static/index.html
@@ -4,13 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+        <link rel="stylesheet" href="dist/styles.css">
+
         <title>React-Flask Template</title>
         <script src="dist/bundle.js" type="text/javascript" defer></script>
-
     </head>
+
     <body>
         <div id="content" />
         index.html
     </body>
+    
 </html>
