--- a/template/static/css/fullstack.css
+++ b/template/static/css/fullstack.css
@@ -1,3 +1,10 @@
+.page-header {
+    background-image: url('../images/header.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
 .header-contents h1 { 
     font-size: 120px; 
     font-weight: 300;
