--- a/template/static/css/fullstack.css
+++ b/template/static/css/fullstack.css
@@ -1,6 +1,6 @@
 .page-header {
-    /* background-image: url('../images/header2.jpg'); */
-    background-image: url('../images/1.gif');
+    background-image: url('../images/header.jpg');
+    /* background-image: url('../images/1.gif'); */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
